# SkyForge

./: .gitignore  CMakeLists.txt  README.md  compile_win.bat
src/ExampleGame/: ExampleGame.cs  Player.cs  game.cs
src/SkyForge/: GameObject.cs  IGameObject.cs
src/SkyForge/Core/: Application.cs  EntryPoint.cs
src/SkyForge/GameComponent/: BaseComponent.cs  IComponent.cs
src/SkyForge/GameObject/: GameObject.cs  IGameObject.cs
src/SkyForge/Graphics/: GraphicsContext.cs  GraphicsSystem.cs  Texture.cs  WindowConsole.cs
src/SkyForge/Input/: InputKey.cs  InputState.cs  InputSystem.cs  KeyCode.cs
src/SkyForge/LogSystem/: Log.cs  LogLevel.cs  Logger.cs  LoggerImpl.cs
src/SkyForge/Math/: Vector2.cs
